--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "nodemon"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "repository": {
     "type": "git",
